tests/baselines/reference/unusedVariablesinNamespaces3.errors.txt
tests/cases/compiler/unusedVariablesinNamespaces3.ts(3,11): error TS6133: 'numberRegexp' is declared but its value is never read.


==== tests/cases/compiler/unusedVariablesinNamespaces3.ts (1 errors) ====
    namespace Validation {
        const lettersRegexp = /^[A-Za-z]+$/;
        const numberRegexp = /^[0-9]+$/;
              ~~~~~~~~~~~~
!!! error TS6133: 'numberRegexp' is declared but its value is never read.
        export const anotherUnusedVariable = "Dummy value";
    
        export class LettersOnlyValidator {
            isAcceptable(s2: string) {
                return lettersRegexp.test(s2);
            }
        }
    }